# pymc_environment_maker

./: README.md  pixi.toml  pymc_demo.ipynb  pymc_demo.py  pyproject.toml
