[tool.poetry]
name = "pymc_environment"
version = "0.1.0"
description = ""
authors = ["Opher Donchin <donchin@bgu.ac.il>"]

[tool.poetry.dependencies]
python = "*"
arviz = "*"
pymc = "*"
ipython = "*"
ipywidgets = "*"
ipympl = "*"
graphviz = "*"
notebook = "*"
matplotlib = "*"
numpy = "*"
numba = "*"
scipy = "*"
pandas = "*"
xarray = "*"
pip = "*"
pydot = "*"
nbconvert = "*"
jupytext = "*"
networkx = "*"

# PyPI-specific dependencies (same as pixi [pypi-dependencies])
bambi = "*"
kulprit = "*"
nutpie = "*"
preliz = "*"
threadpoolctl = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
